UI: Fix overflow property bug.

--- a/hawk/app/assets/stylesheets/shared/_form.scss
+++ b/hawk/app/assets/stylesheets/shared/_form.scss
@@ -169,3 +169,7 @@ fieldset[disabled], fieldset[disabled]:active, fieldset[disabled]:focus,
   background: $theme-green;
   border-color: $theme-green-border;
 }
+
+.tab-pane .form-group { 
+  overflow: auto;
+}
